# VINS-Mono-GTSAM

./: README.md
config/euroc/: euroc_config.yaml
config/realsense/: realsense_color_config.yaml
pose_graph/: CMakeLists.txt
pose_graph/src/: keyframe.cpp  keyframe.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
support_files/: d455_outdoor.launch
